--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,50 +1,10 @@
-# Ghostwriter
-
-Enhanced port of the Ghost "[ghostwriter](https://github.com/roryg/ghostwriter)" theme to the [Hugo](https://gohugo.io) site generator.
-
-## Installation
-
-Inside the folder of your Hugo site run:
-
-```bash
-$ mkdir themes
-$ cd themes
-$ git clone https://github.com/jbub/ghostwriter
-```
-
-For more information read the official [setup guide](//gohugo.io/overview/installing/) of Hugo.
-
-## Development
-
-After installing the theme you need to install javascript dependencies. You can use 
-`npm` or `yarn` to install them from `package.json`. We are using `webpack` to build
-and package styles. In order to develop with realtime reloading in the browser you can 
-use this powerful combo:
-
-```bash
-hugo server
-yarn run watch
-```
-
-To update theme styles edit the `styles/style.scss` file. You can then either use the `watch` command
-or run `build` to compile the styles:
-
-```bash
-yarn run build
-```
-
-## Example config.toml
-
-To customize your theme you can use following params:
-
-```toml
 baseurl = "https://example.com/"
-title = "mytitle"
+title = "Ghostwriter example"
 theme = "ghostwriter"
 languageCode = "en-us"
 copyright = "My Name"
-googleAnalytics = "XXX"
 disqusShortname = "XXX"
+googleAnalytics = "XXX"
 
 [Privacy]
 
@@ -65,8 +25,8 @@ disqusShortname = "XXX"
 
 [Params]
     intro = true
-    headline = "My headline"
-    description = "My description"
+    headline = "Ghostwriter example"
+    description = "Ghostwriter example description"
     github = "https://github.com/XXX"
     gitlab = "https://gitlab.com/XXX"
     linkedin = "https://linkedin.com/in/XXX/"
@@ -111,7 +71,3 @@ disqusShortname = "XXX"
     name = "About"
     url = "/page/about/"
     weight = 4
-```
-
-You can also inject arbitrary HTML into `<head>` simply by overriding the `extra-in-head.html`
-partial, which is meant for that purpose.
