Add Google Analytics

--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ title = "dotan3's CTF adventures"
 theme = "ghostwriter"
 languageCode = "en-us"
 copyright = "dotan3"
-googleAnalytics = "XXX"
+googleAnalytics = "UA-141297077-1"
 disqusShortname = "XXX"
 
 [Privacy]
